--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-
+/.idea
 # dependencies
 /node_modules
 
@@ -8,7 +8,6 @@
 
 # production
 /build
-
 # misc
 .DS_Store
 .env.local
