--- a/package.json
+++ b/package.json
@@ -3,21 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts-ts": "2.15.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-scripts-ts": "2.15.1",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "test": "react-scripts-ts test --env=jsdom --watchAll",
+    "test:ci": "CI=true react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject",
+    "lint": "tslint --project tsconfig.json",
+    "format:fix": "pretty-quick --staged",
+    "precommit": "run-s format:fix lint",
+    "prepush": "run-p test:ci"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
-    "@types/node": "^10.0.4",
-    "@types/react": "^16.3.13",
+    "@types/node": "^9.6.6",
+    "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^5.0.18",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/redux-devtools": "^3.0.43",
+    "@types/redux-logger": "^3.0.6",
+    "@types/webpack-env": "^1.13.6",
+    "husky": "^0.14.3",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
+    "redux-devtools": "^3.4.1",
+    "redux-logger": "^3.0.6",
     "typescript": "^2.8.3"
   }
 }
